--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "devDependencies": {
     "@types/node": "20.11.24",
     "@types/react": "18.2.61",
-    "typescript": "5.3.3"
+    "typescript": "^5.3.3"
   }
 }
